Fixed overflow issue thatw as creating white border and changed to PinkNoise.

--- a/styles/main.css
+++ b/styles/main.css
@@ -27,14 +27,14 @@ h1 {
 }
 
 .container {
-  width: 1600px;
+  max-width: 1600px;
   margin: 0 auto;
 }
 
 #grassfield {
   float: left;
   padding-left: 10px;
-  overflow: scroll;
+  overflow: hidden;
 }
 
 footer {
